--- a/webapp/src/app/resource/instructional/differentiation/differentiation.component.scss
+++ b/webapp/src/app/resource/instructional/differentiation/differentiation.component.scss
@@ -28,14 +28,14 @@
     }
 
     .leading-icon{
-        margin-left: -19px;
+        margin-left: -16px;
         svg {
             color: $warning-900;
             background: url('/assets/images/yellow-spot-3.png') no-repeat;
             background-size: contain;
             padding: 7px;
             margin-bottom: -7px;
-            font-size: 2rem;
+            font-size: 1.75rem;
         }
     }
 
